New Login page to login via api to weconnect_server Simplified some environment variable names since reading 10 chars into the string to find which server ... was huring my brain. Changed the default port number for the weconnect-server away from the 8080 that is used widely for other purposes.

--- a/package.json
+++ b/package.json
@@ -162,7 +162,8 @@
     "react-truncate-markup": "~5.1.0",
     "rxjs": "^6.6.7",
     "styled-components": "~5.3.11",
-    "topojson-client": "^3.1.0"
+    "topojson-client": "^3.1.0",
+    "validator": "^13.12.0"
   },
   "eslintConfig": {
     "extends": [
