--- a/package.json
+++ b/package.json
@@ -54,18 +54,11 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/register": "^7.23.7",
     "@snyk/protect": "^1.657.0",
-    "@storybook/addon-essentials": "^7.6.7",
-    "@storybook/addon-interactions": "^7.6.7",
-    "@storybook/addon-links": "^7.6.7",
-    "@storybook/blocks": "^7.6.7",
-    "@storybook/react": "^7.6.7",
-    "@storybook/react-webpack5": "^7.6.7",
-    "@storybook/test": "^7.6.7",
-    "@wdio/browserstack-service": "^8.35.1",
-    "@wdio/cli": "^8.35.1",
+    "@wdio/browserstack-service": "^9.4.5",
+    "@wdio/cli": "^9.4.5",
     "@wdio/config": "^8.35.0",
-    "@wdio/globals": "^8.35.1",
-    "@wdio/local-runner": "^8.35.1",
+    "@wdio/globals": "^9.4.5",
+    "@wdio/local-runner": "^9.4.5",
     "@wdio/mocha-framework": "^8.35.0",
     "@wdio/protocols": "^8.32.0",
     "@wdio/spec-reporter": "^8.32.4",
@@ -94,13 +87,12 @@
     "mini-css-extract-plugin": "^2.7.1",
     "mocha": "^10.2.0",
     "moment-locales-webpack-plugin": "^1.2.0",
-    "pre-commit": "^1.2.2",
+    "pre-commit": "^1.0.10",
     "react-hot-loader": "^4.13.1",
-    "storybook": "^7.6.3",
     "terser-webpack-plugin": "^5.1.2",
     "unused-webpack-plugin": "^2.4.0",
     "webdriver": "^8.35.0",
-    "webdriverio": "^8.35.1",
+    "webdriverio": "^9.4.5",
     "webpack": "^5.90.3",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.1.4",
@@ -111,20 +103,18 @@
     "@emotion/is-prop-valid": "^1.1.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@loadable/component": "^5.16.4",
     "@mui/icons-material": "^5.16.0",
     "@mui/lab": "^5.0.0-alpha.96",
     "@mui/material": "^5.16.0",
     "@mui/styled-engine-sc": "^5.10.1",
     "@mui/styles": "^5.16.0",
     "@openreplay/tracker": "^8.1.1",
-    "@storybook/addon-actions": "^7.6.20",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
     "d3-geo": "^2.0.1",
     "d3-selection": "^2.0.0",
     "d3-zoom": "^3.0.0",
-    "flux": "~4.0.1",
+    "flux": "^4.0.4",
     "fs-extra": "^10.0.0",
     "gapi-script": "github:wevote/gapi-script",
     "glob": "^9.0.0",
@@ -138,30 +128,22 @@
     "process": "^0.11.10",
     "prop-types": "~15.8.1",
     "puppeteer": "^22.10.0",
-    "react": "~17.0.2",
-    "react-bootstrap": "^1.6.4",
-    "react-confetti": "^6.1.0",
+    "react": "^19.0.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "~17.0.2",
+    "react-dom": "~19.0.0",
     "react-ga4": "^2.1.0",
-    "react-google-autocomplete": "^2.6.1",
+    "react-google-autocomplete": "^2.7.3",
     "react-google-button": "^0.8.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-gtm-module": "^2.0.11",
     "react-helmet-async": "^1.3.0",
     "react-phone-number-input": "^3.4.3",
-    "react-player": "^2.16.0",
-    "react-rewards": "^2.0.4",
-    "react-router-dom": "^5.3.4",
-    "react-router-dom-v5-compat": "^6.28.1",
-    "react-share": "^4.4.1",
-    "react-slick": "^0.30.2",
-    "react-svg": "^14.1.9",
+    "react-router": "^7.1.1",
     "react-text-truncate": "^0.19.0",
-    "react-toastify": "^7.0.4",
-    "react-truncate-markup": "~5.1.0",
+    "react-toastify": "^11.0.2",
+    "react-truncate-markup": "^5.1.2",
     "rxjs": "^6.6.7",
-    "styled-components": "~5.3.11",
+    "styled-components": "^6.1.13",
     "topojson-client": "^3.1.0",
     "validator": "^13.12.0"
   },
