--- a/package.json
+++ b/package.json
@@ -54,22 +54,12 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/register": "^7.23.7",
     "@snyk/protect": "^1.657.0",
-    "@wdio/browserstack-service": "^9.4.5",
     "@wdio/cli": "^9.4.5",
-    "@wdio/config": "^8.35.0",
-    "@wdio/globals": "^9.4.5",
-    "@wdio/local-runner": "^9.4.5",
-    "@wdio/mocha-framework": "^8.35.0",
-    "@wdio/protocols": "^8.32.0",
-    "@wdio/spec-reporter": "^8.32.4",
-    "axios": "^1.6.0",
-    "babel-loader": "^9.1.3",
+    "babel-loader": "^9.2.1",
     "babel-plugin-styled-components": "^2.1.4",
-    "chai": "^4.3.7",
     "chromatic": "^10.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
-    "cordova-plugin-contacts-x": "^2.0.3",
     "css-minimizer-webpack-plugin": "^6.0.0",
     "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -78,45 +68,40 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-storybook": "^0.6.15",
-    "eslint-plugin-wdio": "^8.24.12",
     "eslint-webpack-plugin": "^2.4.3",
     "express": "^5.0.0-beta.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "jsdom": "^23.0.1",
-    "mini-css-extract-plugin": "^2.7.1",
     "mocha": "^10.2.0",
     "moment-locales-webpack-plugin": "^1.2.0",
     "pre-commit": "^1.0.10",
-    "react-hot-loader": "^4.13.1",
     "terser-webpack-plugin": "^5.1.2",
     "unused-webpack-plugin": "^2.4.0",
-    "webdriver": "^8.35.0",
-    "webdriverio": "^9.4.5",
     "webpack": "^5.90.3",
     "webpack-bundle-analyzer": "^4.8.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.2",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0",
     "webpack-shell-plugin-next": "^2.3.1"
   },
   "dependencies": {
-    "@emotion/is-prop-valid": "^1.1.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.0",
     "@mui/lab": "^5.0.0-alpha.96",
     "@mui/material": "^5.16.0",
-    "@mui/styled-engine-sc": "^5.10.1",
+    "@mui/styled-engine-sc": "^6.3.0",
     "@mui/styles": "^5.16.0",
     "@openreplay/tracker": "^8.1.1",
+    "@tanstack/react-query": "^5.62.11",
+    "@tanstack/react-query-devtools": "^5.62.11",
+    "axios": "^1.7.9",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
     "d3-geo": "^2.0.1",
     "d3-selection": "^2.0.0",
     "d3-zoom": "^3.0.0",
+    "depcheck": "^1.4.7",
     "flux": "^4.0.4",
     "fs-extra": "^10.0.0",
-    "gapi-script": "github:wevote/gapi-script",
     "glob": "^9.0.0",
     "iframe-resizer-react": "1.1.0",
     "jquery": "^3.7.1",
@@ -128,9 +113,9 @@
     "process": "^0.11.10",
     "prop-types": "~15.8.1",
     "puppeteer": "^22.10.0",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "~19.0.0",
+    "react-dom": "~18.3.1",
     "react-ga4": "^2.1.0",
     "react-google-autocomplete": "^2.7.3",
     "react-google-button": "^0.8.0",
@@ -154,6 +139,11 @@
   },
   "bugs": {
     "url": "https://github.com/wevote/weconnect/issues"
+  },
+  "overrides": {
+    "flux": {
+      "react": "^18.3.1"
+    }
   },
   "readme": "ERROR: No README data found!",
   "homepage": "https://github.com/wevote/weconnect#readme",
